[package]
name = "screepies"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib", "rlib" ]

[workspace]
default-members = [ "../screepies" ]
members = [
	"../screepies",
	# "htn",
	"macros",
]

[dependencies]
js-sys = "*"
log = "*"
fern = "*"
screeps-game-api = "*"
wasm-bindgen = "*"
web-sys = { version = "*", features = [ "console" ] }

macros = { path = "macros" }

serde = { version = "*", features = [ "derive" ] }
serde-wasm-bindgen = "*"
erased-serde = "*"
bitcode = { version = "*", features = [ "serde" ] }
serde_json = "*"
rmp-serde = "*"
base64 = "*"
fastrand = "*"
vecmap-rs = { version = "*", features = [ "serde" ] }
enum_dispatch = "*"
tabled = "*"
strum = { version = "*", features = [ "derive" ] }

# htn = { path = "htn" }

[build-dependencies]
# reqwest = { version = "*", features = [ "json", "blocking" ] }
# futures = { version = "*", features = [ "executor" ] }
# serde = { version = "*", features = [ "derive" ] }
# bitcode = { version = "*", features = [ "serde" ] }
# serde_json = "*"
proc-macro2 = "*"
quote = "*"
syn = { version = "*", features = [ "full" ] }
walkdir = "*"
prettyplease = "*"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
panic = "abort"
opt-level = 3
lto = true

[package.metadata.wasm-pack.profile.release]
# See wasm-opt for full available options; handy examples:
# -O4 - optimize aggressively for performance
# -Oz - optimize aggressively for code size
# -g - leave debug info in place, allowing for more descriptive stack traces on panic
# --signext-lowering - removes opcodes that the screeps servers can't load (see 
# https://github.com/rustyscreeps/screeps-game-api/issues/391)
wasm-opt = [ "-O4", "--signext-lowering", "-g", ]

[features]
default = []

sim = [ "screeps-game-api/sim" ]
mmo = [ "screeps-game-api/mmo" ]
